--- a/lib/goom/README
+++ b/lib/goom/README
@@ -1,4 +1,9 @@
 **************************
+* What a GOOM++! version C++14 *
+**************************
+Same algorithms, re-written in C++14 but GLK, with added color from 'vivid'
+
+**************************
 * What a GOOM! version 2 *
 **************************
 copyright 2000-2004, by Jean-Christophe Hoelt <jeko@ios-software.com>
